aTunes 3.0.1
------------
- FIX: Better control of exceptions reading tags with JAudiotagger
- FIX: NPE when importing from a folder without parent file
- FIX: Disable play list menu actions when play list selection changes, not only popup menu
- FIX: Problem reordering columns with Java 7
- FIX: Problem changing look and feel and skin using keyboard in combos
- FIX: Error retrieving titles from CDDB while ripping a CD
- FIX: Avoid concurrency problems with album collections
- FIX: Updated JNA library to avoid initialization errors
- FIX: Initial heap size changed to 128MB
- FIX: Check if icon cache fails reading icon files
- FIX: Problem with play lists active and visible after upgrading version
- FIX: Problem marking artist as favorite when artist is unknown or artist album is used
- FIX: Disabled rounded corners with Substance as seem to cause problems with early 1.6.0 virtual machines
- FIX: Save covers to disk fails if artist or album name contains forbidden chars in file system

aTunes 3.0.0
------------
- Allow truncate playlist when copying to device [ patch by deathgorepain ]
- New options to organize artist view, using artist and / or album artist tag fields [ patch by Laurent Cathala ]
- Removed external pictures support, only pictures exported with application are supported
- Improved performance of Full Screen Mode
- Use dynamic heap size in Windows (5% of free memory for initial heap space, 10% for maximum heap space)
- New action to remove duplicates from play list
- Removed xml serialization of repository as it can cause OutOfMemory with large repositories
- Multiple instances not allowed in Max OS X
- Replaced combo boxes to select navigation and context panels. Use buttons with icons instead
- Removed option to show ticks and labels in progress slider
- UI changes in player controls
- Filter text field separated for play list and navigator
- Improved filters to retrieve albums from last.fm (mbid, artist match) Removed filters as preferences