@@ -492,11 +492,6 @@
 			<version>7.2.1</version>
 		</dependency>
 		<dependency>
-			<groupId>libxine</groupId>
-			<artifactId>libxine</artifactId>
-			<version>custom</version>
-		</dependency>
-		<dependency>
 			<groupId>last.fm</groupId>
 			<artifactId>last.fm-bindings</artifactId>
 			<version>0.1.0-SVN-20110814</version>
